# serializer version: 1
# name: test_zephyr_codegen_golden[esp_bh1750][esp_bh1750]
  dict({
    'CMakeLists.txt': '''
      cmake_minimum_required(VERSION 3.20.0)
      find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
      project(esp32_devkitc)
      target_sources(app PRIVATE src/main.c src/bh1750.c)
      target_include_directories(app PRIVATE src/include)
    ''',
    'boards/esp32_devkitc.overlay': '''
      /* Generated by demol */
      &i2c0 { bh1750@0x23 { status = "okay"; reg = <0x23>; compatible = "rohm,bh1750"; }; };
  
    ''',
    'prj.conf': '''
      # Generated by demol
      CONFIG_BH1750=y
      # MQTT client stack (T16 — skeleton only)
      CONFIG_NET_IPV4=y
      CONFIG_NET_TCP=y
      CONFIG_NET_SOCKETS=y
      CONFIG_NET_SOCKETS_OFFLOAD=n
      CONFIG_NET_DHCPV4=y
      CONFIG_MQTT_LIB=y
  
    ''',
    'src/bh1750.c': '''
      /*
       * Zephyr BH1750 driver (ambient light sensor).
       * Generated by demol — uses Zephyr's built-in rohm,bh1750 sensor
       * driver via the unified sensor_sample_fetch / sensor_channel_get API.
       */
      
      #include <zephyr/device.h>
      #include <zephyr/drivers/sensor.h>
      
      #include "bh1750.h"
      
      static const struct device *bh1750_dev = DEVICE_DT_GET(DT_INST(0, rohm_bh1750));
      
      int bh1750_init(void)
      {
          if (!device_is_ready(bh1750_dev)) {
              return -ENODEV;
          }
          return 0;
      }
      
      int bh1750_read(struct bh1750_data *data)
      {
          struct sensor_value lux = {0};
      
          if (sensor_sample_fetch(bh1750_dev) < 0) {
              return -EIO;
          }
      
          sensor_channel_get(bh1750_dev, SENSOR_CHAN_LIGHT, &lux);
      
          data->illuminance = sensor_value_to_double(&lux);
          return 0;
      }
    ''',
    'src/main.c': '''
      /*
       * Zephyr application entry point.
       * Generated by demol -- driver logic is added in a later task.
       */
      
      #include <zephyr/kernel.h>
      #include <zephyr/net/mqtt.h>
      #include <zephyr/net/socket.h>
      
      static struct mqtt_client client;
      
      static void mqtt_init(void)
      {
              /* T16 skeleton: broker.connect, client.init.
               * Full publish loop is implemented in a later task.
               */
      }
      
      int main(void)
      {
              mqtt_init();
              return 0;
      }
  
    ''',
  })
# ---
# name: test_zephyr_codegen_golden[esp_bme280][esp_bme280]
  dict({
    'CMakeLists.txt': '''
      cmake_minimum_required(VERSION 3.20.0)
      find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
      project(esp32_devkitc)
      target_sources(app PRIVATE src/main.c src/bme280.c)
      target_include_directories(app PRIVATE src/include)
    ''',
    'boards/esp32_devkitc.overlay': '''
      /* Generated by demol */
      &i2c0 { bme280@0x76 { status = "okay"; reg = <0x76>; compatible = "bosch,bme280"; }; };
  
    ''',
    'prj.conf': '''
      # Generated by demol
      CONFIG_BME280=y
      # MQTT client stack (T16 — skeleton only)
      CONFIG_NET_IPV4=y
      CONFIG_NET_TCP=y
      CONFIG_NET_SOCKETS=y
      CONFIG_NET_SOCKETS_OFFLOAD=n
      CONFIG_NET_DHCPV4=y
      CONFIG_MQTT_LIB=y
  
    ''',
    'src/bme280.c': '''
      /*
       * Zephyr BME280 driver (env sensor: temperature, pressure, humidity).
       * Generated by demol — uses Zephyr's built-in bosch,bme280 sensor
       * driver via the unified sensor_sample_fetch / sensor_channel_get API.
       */
      
      #include <zephyr/device.h>
      #include <zephyr/drivers/sensor.h>
      
      #include "bme280.h"
      
      static const struct device *bme280_dev = DEVICE_DT_GET(DT_INST(0, bosch_bme280));
      
      int bme280_init(void)
      {
          if (!device_is_ready(bme280_dev)) {
              return -ENODEV;
          }
          return 0;
      }
      
      int bme280_read(struct bme280_data *data)
      {
          struct sensor_value t = {0};
          struct sensor_value p = {0};
          struct sensor_value h = {0};
      
          if (sensor_sample_fetch(bme280_dev) < 0) {
              return -EIO;
          }
      
          sensor_channel_get(bme280_dev, SENSOR_CHAN_AMBIENT_TEMP, &t);
          sensor_channel_get(bme280_dev, SENSOR_CHAN_PRESS, &p);
          sensor_channel_get(bme280_dev, SENSOR_CHAN_HUMIDITY, &h);
      
          data->temperature = sensor_value_to_double(&t);
          data->pressure    = sensor_value_to_double(&p);
          data->humidity    = sensor_value_to_double(&h);
          return 0;
      }
    ''',
    'src/main.c': '''
      /*
       * Zephyr application entry point.
       * Generated by demol -- driver logic is added in a later task.
       */
      
      #include <zephyr/kernel.h>
      #include <zephyr/net/mqtt.h>
      #include <zephyr/net/socket.h>
      
      static struct mqtt_client client;
      
      static void mqtt_init(void)
      {
              /* T16 skeleton: broker.connect, client.init.
               * Full publish loop is implemented in a later task.
               */
      }
      
      int main(void)
      {
              mqtt_init();
              return 0;
      }
  
    ''',
  })
# ---
# name: test_zephyr_codegen_golden[esp_bme680][esp_bme680]
  dict({
    'CMakeLists.txt': '''
      cmake_minimum_required(VERSION 3.20.0)
      find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
      project(esp32_devkitc)
      target_sources(app PRIVATE src/main.c src/bme680.c)
      target_include_directories(app PRIVATE src/include)
    ''',
    'boards/esp32_devkitc.overlay': '''
      /* Generated by demol */
      &i2c0 { bme680@0x76 { status = "okay"; reg = <0x76>; compatible = "bosch,bme680"; }; };
  
    ''',
    'prj.conf': '''
      # Generated by demol
      CONFIG_BME680=y
      # MQTT client stack (T16 — skeleton only)
      CONFIG_NET_IPV4=y
      CONFIG_NET_TCP=y
      CONFIG_NET_SOCKETS=y
      CONFIG_NET_SOCKETS_OFFLOAD=n
      CONFIG_NET_DHCPV4=y
      CONFIG_MQTT_LIB=y
  
    ''',
    'src/bme680.c': '''
      /*
       * Zephyr BME680 driver (env sensor: temperature, pressure, humidity).
       * Generated by demol — uses Zephyr's built-in bosch,bme680 sensor
       * driver via the unified sensor_sample_fetch / sensor_channel_get API.
       */
      
      #include <zephyr/device.h>
      #include <zephyr/drivers/sensor.h>
      #include <zephyr/drivers/sensor/bme680.h>
      
      #include "bme680.h"
      
      static const struct device *bme680_dev = DEVICE_DT_GET(DT_INST(0, bosch_bme680));
      
      int bme680_init(void)
      {
          if (!device_is_ready(bme680_dev)) {
              return -ENODEV;
          }
          return 0;
      }
      
      int bme680_read(struct bme680_data *data)
      {
          struct sensor_value t = {0};
          struct sensor_value p = {0};
          struct sensor_value h = {0};
      
          if (sensor_sample_fetch(bme680_dev) < 0) {
              return -EIO;
          }
      
          sensor_channel_get(bme680_dev, SENSOR_CHAN_AMBIENT_TEMP, &t);
          sensor_channel_get(bme680_dev, SENSOR_CHAN_PRESS, &p);
          sensor_channel_get(bme680_dev, SENSOR_CHAN_HUMIDITY, &h);
      
          data->temperature = sensor_value_to_double(&t);
          data->pressure    = sensor_value_to_double(&p);
          data->humidity    = sensor_value_to_double(&h);
          return 0;
      }
    ''',
    'src/main.c': '''
      /*
       * Zephyr application entry point.
       * Generated by demol -- driver logic is added in a later task.
       */
      
      #include <zephyr/kernel.h>
      #include <zephyr/net/mqtt.h>
      #include <zephyr/net/socket.h>
      
      static struct mqtt_client client;
      
      static void mqtt_init(void)
      {
              /* T16 skeleton: broker.connect, client.init.
               * Full publish loop is implemented in a later task.
               */
      }
      
      int main(void)
      {
              mqtt_init();
              return 0;
      }
  
    ''',
  })
# ---
# name: test_zephyr_codegen_golden[esp_dht22][esp_dht22]
  dict({
    'CMakeLists.txt': '''
      cmake_minimum_required(VERSION 3.20.0)
      find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
      project(esp32_devkitc)
      target_sources(app PRIVATE src/main.c src/dht22.c)
      target_include_directories(app PRIVATE src/include)
    ''',
    'boards/esp32_devkitc.overlay': '''
      /* Generated by demol */
      / {
          dht22_0: dht22_0 {
              compatible = "demol,dht22";
              status = "okay";
              data-gpios = <&gpio0 4 GPIO_ACTIVE_HIGH>;
          };
      };
  
    ''',
    'dts/bindings/demol-dht22.yaml': '''
      description: Dht22 sensor
      compatible: "demol,dht22"
      
      properties:
        data-gpios:
          type: phandle-array
          required: true
          description: GPIO data pin
  
    ''',
    'prj.conf': '''
      # Generated by demol
      CONFIG_DHT22=y
      # MQTT client stack (T16 — skeleton only)
      CONFIG_NET_IPV4=y
      CONFIG_NET_TCP=y
      CONFIG_NET_SOCKETS=y
      CONFIG_NET_SOCKETS_OFFLOAD=n
      CONFIG_NET_DHCPV4=y
      CONFIG_MQTT_LIB=y
  
    ''',
    'src/dht22.c': '''
      /*
       * Zephyr DHT22 driver (GPIO bit-bang temperature/humidity sensor).
       * Generated by demol — implements the timing-sensitive DHT22 protocol
       * using Zephyr GPIO API with microsecond-precision delays.
       */
      
      #include <zephyr/kernel.h>
      #include <zephyr/device.h>
      #include <zephyr/drivers/gpio.h>
      
      #include "dht22.h"
      
      /* ------------------------------------------------------------------
       * Devicetree reference — expects a node with compatible = "demol,dht22"
       * and a "data-gpios" phandle-array property in the board overlay.
       * ---------------------------------------------------------------- */
      static const struct gpio_dt_spec dht22_data =
          GPIO_DT_SPEC_GET(DT_INST(0, demol_dht22), data_gpios);
      
      /* ------------------------------------------------------------------
       * Protocol timing constants (microseconds).
       *
       *           Minimum  Typical  Maximum
       * Start LOW    800    1000    10000
       * Start HIGH    20      30       50
       * Response LOW  75      80      100
       * Response HIGH 75      80      100
       * Bit LOW       48      50       56
       * Bit "0" HIGH  22      26       30
       * Bit "1" HIGH  68      70       75
       * ---------------------------------------------------------------- */
      #define DHT22_START_LOW_US      1800
      #define DHT22_START_HIGH_US      30
      #define DHT22_RESPONSE_WAIT_US  120
      #define DHT22_BIT_LOW_MIN_US     30
      #define DHT22_BIT_SAMPLE_US      40
      #define DHT22_RECOVERY_MS         1
      
      /* ------------------------------------------------------------------
       * Data structure returned by dht22_read().
       * ---------------------------------------------------------------- */
      struct dht22_data {
          double temperature;
          double humidity;
      };
      
      /* ------------------------------------------------------------------
       * dht22_init — configure the data pin, pull high (idle state).
       * ---------------------------------------------------------------- */
      int dht22_init(void)
      {
          if (!device_is_ready(dht22_data.port)) {
              return -ENODEV;
          }
      
          /* Start in output-high (idle bus state for DHT22).
           * GPIO_OPEN_DRAIN + pull-up would be ideal but we manage the
           * pin direction manually for precise timing control. */
          gpio_pin_configure_dt(&dht22_data, GPIO_OUTPUT_HIGH);
          return 0;
      }
      
      /* ------------------------------------------------------------------
       * dht22_pulse_in — measure the width of a HIGH pulse (in �s).
       * Returns 0 on timeout.
       * ---------------------------------------------------------------- */
      static uint32_t dht22_pulse_in(void)
      {
          uint32_t width = 0;
      
          /* Wait for pin to go HIGH */
          for (int i = 0; i < DHT22_RESPONSE_WAIT_US; i++) {
              if (gpio_pin_get_dt(&dht22_data)) {
                  break;
              }
              k_busy_wait(1);
              if (++width > DHT22_RESPONSE_WAIT_US) {
                  return 0;
              }
          }
      
          /* Measure how long it stays HIGH */
          width = 0;
          for (int i = 0; i < DHT22_RESPONSE_WAIT_US; i++) {
              if (!gpio_pin_get_dt(&dht22_data)) {
                  break;
              }
              k_busy_wait(1);
              if (++width > DHT22_RESPONSE_WAIT_US) {
                  return 0;
              }
          }
      
          return width;
      }
      
      /* ------------------------------------------------------------------
       * dht22_read_raw — send start signal, receive 40-bit frame.
       *
       * Returns 0 on success, -EIO on timeout or checksum mismatch.
       * ---------------------------------------------------------------- */
      static int dht22_read_raw(uint8_t buf[5])
      {
          int ret;
      
          /* ---- Send start signal ---- */
          gpio_pin_configure_dt(&dht22_data, GPIO_OUTPUT);
          gpio_pin_set_dt(&dht22_data, 0);
          k_busy_wait(DHT22_START_LOW_US);
          gpio_pin_set_dt(&dht22_data, 1);
          k_busy_wait(DHT22_START_HIGH_US);
      
          /* Switch to input — DHT22 will drive the bus */
          gpio_pin_configure_dt(&dht22_data, GPIO_INPUT);
      
          /* ---- Wait for DHT22 response pulse ---- */
          /* LOW pulse (DHT22 pulls low ~80 us) */
          ret = gpio_pin_get_dt(&dht22_data) == 0;
          for (int i = 0; i < DHT22_RESPONSE_WAIT_US; i++) {
              if (gpio_pin_get_dt(&dht22_data)) {
                  break;
              }
              k_busy_wait(1);
          }
      
          /* HIGH pulse (DHT22 pulls high ~80 us) */
          for (int i = 0; i < DHT22_RESPONSE_WAIT_US; i++) {
              if (!gpio_pin_get_dt(&dht22_data)) {
                  break;
              }
              k_busy_wait(1);
          }
      
          /* ---- Read 40 data bits ---- */
          for (int bit = 0; bit < 40; bit++) {
              /* Each bit starts with ~50 us LOW */
              for (int i = 0; i < 60; i++) {
                  if (gpio_pin_get_dt(&dht22_data)) {
                      break;
                  }
                  k_busy_wait(1);
              }
      
              /* Sample after ~40 us — short HIGH = 0, long HIGH = 1 */
              k_busy_wait(DHT22_BIT_SAMPLE_US);
      
              uint32_t val = gpio_pin_get_dt(&dht22_data);
      
              /* Wait for pin to go LOW again before next bit */
              for (int i = 0; i < 60; i++) {
                  if (!gpio_pin_get_dt(&dht22_data)) {
                      break;
                  }
                  k_busy_wait(1);
              }
      
              int byte_idx = bit / 8;
              buf[byte_idx] = (buf[byte_idx] << 1) | (val ? 1 : 0);
          }
      
          /* Return pin to idle (output, high) */
          gpio_pin_configure_dt(&dht22_data, GPIO_OUTPUT_HIGH);
      
          return 0;
      }
      
      /* ------------------------------------------------------------------
       * dht22_read — read temperature (�C) and humidity (%RH).
       *
       * Populates data->temperature and data->humidity as doubles.
       * Returns 0 on success, -EIO on failure.
       * ---------------------------------------------------------------- */
      int dht22_read(struct dht22_data *data)
      {
          uint8_t buf[5] = {0};
      
          if (!data) {
              return -EINVAL;
          }
      
          if (dht22_read_raw(buf) < 0) {
              return -EIO;
          }
      
          /* Verify checksum */
          uint8_t sum = buf[0] + buf[1] + buf[2] + buf[3];
          if ((sum & 0xFF) != buf[4]) {
              return -EIO;
          }
      
          /* Decode humidity (16 bits, integer.decimal) */
          uint16_t hum_raw = ((uint16_t)buf[0]) << 8 | buf[1];
          data->humidity = hum_raw * 0.1;
      
          /* Decode temperature (16 bits, signed, integer.decimal) */
          int16_t temp_raw = ((int16_t)(buf[2] & 0x7F)) << 8 | buf[3];
          if (buf[2] & 0x80) {
              temp_raw = -temp_raw;
          }
          data->temperature = temp_raw * 0.1;
      
          return 0;
      }
    ''',
    'src/main.c': '''
      /*
       * Zephyr application entry point.
       * Generated by demol -- driver logic is added in a later task.
       */
      
      #include <zephyr/kernel.h>
      #include <zephyr/net/mqtt.h>
      #include <zephyr/net/socket.h>
      
      static struct mqtt_client client;
      
      static void mqtt_init(void)
      {
              /* T16 skeleton: broker.connect, client.init.
               * Full publish loop is implemented in a later task.
               */
      }
      
      int main(void)
      {
              mqtt_init();
              return 0;
      }
  
    ''',
  })
# ---
# name: test_zephyr_codegen_golden[esp_ds18b20][esp_ds18b20]
  dict({
    'CMakeLists.txt': '''
      cmake_minimum_required(VERSION 3.20.0)
      find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
      project(esp32_devkitc)
      target_sources(app PRIVATE src/main.c src/ds18b20.c)
      target_include_directories(app PRIVATE src/include)
    ''',
    'boards/esp32_devkitc.overlay': '''
      /* Generated by demol */
      / {
          ds18b20_0: ds18b20_0 {
              compatible = "demol,ds18b20";
              status = "okay";
              data-gpios = <&gpio0 4 GPIO_ACTIVE_HIGH>;
          };
      };
  
    ''',
    'dts/bindings/demol-ds18b20.yaml': '''
      description: Ds18B20 sensor
      compatible: "demol,ds18b20"
      
      properties:
        data-gpios:
          type: phandle-array
          required: true
          description: GPIO data pin
  
    ''',
    'prj.conf': '''
      # Generated by demol
      CONFIG_DS18B20=y
      # MQTT client stack (T16 — skeleton only)
      CONFIG_NET_IPV4=y
      CONFIG_NET_TCP=y
      CONFIG_NET_SOCKETS=y
      CONFIG_NET_SOCKETS_OFFLOAD=n
      CONFIG_NET_DHCPV4=y
      CONFIG_MQTT_LIB=y
  
    ''',
    'src/ds18b20.c': '''
      /*
       * Zephyr DS18B20 driver (1-Wire temperature sensor).
       * Generated by demol — uses Zephyr's built-in maxim,ds18b20 sensor
       * driver via the unified sensor_sample_fetch / sensor_channel_get API.
       */
      
      #include <zephyr/device.h>
      #include <zephyr/drivers/sensor.h>
      
      #include "ds18b20.h"
      
      static const struct device *ds18b20_dev = DEVICE_DT_GET(DT_INST(0, maxim_ds18b20));
      
      int ds18b20_init(void)
      {
          if (!device_is_ready(ds18b20_dev)) {
              return -ENODEV;
          }
          return 0;
      }
      
      int ds18b20_read(struct ds18b20_data *data)
      {
          struct sensor_value t = {0};
      
          if (sensor_sample_fetch(ds18b20_dev) < 0) {
              return -EIO;
          }
      
          sensor_channel_get(ds18b20_dev, SENSOR_CHAN_AMBIENT_TEMP, &t);
      
          data->temperature = sensor_value_to_double(&t);
          return 0;
      }
    ''',
    'src/main.c': '''
      /*
       * Zephyr application entry point.
       * Generated by demol -- driver logic is added in a later task.
       */
      
      #include <zephyr/kernel.h>
      #include <zephyr/net/mqtt.h>
      #include <zephyr/net/socket.h>
      
      static struct mqtt_client client;
      
      static void mqtt_init(void)
      {
              /* T16 skeleton: broker.connect, client.init.
               * Full publish loop is implemented in a later task.
               */
      }
      
      int main(void)
      {
              mqtt_init();
              return 0;
      }
  
    ''',
  })
# ---
# name: test_zephyr_codegen_golden[esp_iot_device][esp_iot_device]
  dict({
    'CMakeLists.txt': '''
      cmake_minimum_required(VERSION 3.20.0)
      find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
      project(esp32_devkitc)
      target_sources(app PRIVATE src/main.c src/bme680.c)
      target_include_directories(app PRIVATE src/include)
    ''',
    'boards/esp32_devkitc.overlay': '''
      /* Generated by demol */
      &i2c0 { bme680@0x76 { status = "okay"; reg = <0x76>; compatible = "bosch,bme680"; }; };
      / {
          hcsr04p_0: hcsr04p_0 {
              compatible = "demol,hcsr04p";
              status = "okay";
              trigger-gpios = <&gpio0 13 GPIO_ACTIVE_HIGH>;
              echo-gpios = <&gpio0 14 GPIO_ACTIVE_HIGH>;
          };
      };
  
    ''',
    'dts/bindings/demol-hcsr04p.yaml': '''
      description: Hcsr04P sensor
      compatible: "demol,hcsr04p"
      
      properties:
        trigger-gpios:
          type: phandle-array
          required: true
          description: GPIO trigger pin
  
    ''',
    'prj.conf': '''
      # Generated by demol
      CONFIG_BME680=y
      # MQTT client stack (T16 — skeleton only)
      CONFIG_NET_IPV4=y
      CONFIG_NET_TCP=y
      CONFIG_NET_SOCKETS=y
      CONFIG_NET_SOCKETS_OFFLOAD=n
      CONFIG_NET_DHCPV4=y
      CONFIG_MQTT_LIB=y
  
    ''',
    'src/bme680.c': '''
      /*
       * Zephyr BME680 driver (env sensor: temperature, pressure, humidity).
       * Generated by demol — uses Zephyr's built-in bosch,bme680 sensor
       * driver via the unified sensor_sample_fetch / sensor_channel_get API.
       */
      
      #include <zephyr/device.h>
      #include <zephyr/drivers/sensor.h>
      #include <zephyr/drivers/sensor/bme680.h>
      
      #include "bme680.h"
      
      static const struct device *bme680_dev = DEVICE_DT_GET(DT_INST(0, bosch_bme680));
      
      int bme680_init(void)
      {
          if (!device_is_ready(bme680_dev)) {
              return -ENODEV;
          }
          return 0;
      }
      
      int bme680_read(struct bme680_data *data)
      {
          struct sensor_value t = {0};
          struct sensor_value p = {0};
          struct sensor_value h = {0};
      
          if (sensor_sample_fetch(bme680_dev) < 0) {
              return -EIO;
          }
      
          sensor_channel_get(bme680_dev, SENSOR_CHAN_AMBIENT_TEMP, &t);
          sensor_channel_get(bme680_dev, SENSOR_CHAN_PRESS, &p);
          sensor_channel_get(bme680_dev, SENSOR_CHAN_HUMIDITY, &h);
      
          data->temperature = sensor_value_to_double(&t);
          data->pressure    = sensor_value_to_double(&p);
          data->humidity    = sensor_value_to_double(&h);
          return 0;
      }
    ''',
    'src/main.c': '''
      /*
       * Zephyr application entry point.
       * Generated by demol -- driver logic is added in a later task.
       */
      
      #include <zephyr/kernel.h>
      #include <zephyr/net/mqtt.h>
      #include <zephyr/net/socket.h>
      
      static struct mqtt_client client;
      
      static void mqtt_init(void)
      {
              /* T16 skeleton: broker.connect, client.init.
               * Full publish loop is implemented in a later task.
               */
      }
      
      int main(void)
      {
              mqtt_init();
              return 0;
      }
  
    ''',
  })
# ---
# name: test_zephyr_codegen_golden[esp_pir_hcsr501][esp_pir_hcsr501]
  dict({
    'CMakeLists.txt': '''
      cmake_minimum_required(VERSION 3.20.0)
      find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
      project(esp32_devkitc)
      target_sources(app PRIVATE src/main.c src/pir_hcsr501.c)
      target_include_directories(app PRIVATE src/include)
    ''',
    'boards/esp32_devkitc.overlay': '''
      /* Generated by demol */
      / {
          pir_hcsr501_0: pir_hcsr501_0 {
              compatible = "demol,pir_hcsr501";
              status = "okay";
              OUT-gpios = <&gpio0 11 GPIO_ACTIVE_HIGH>;
          };
      };
  
    ''',
    'dts/bindings/demol-pir_hcsr501.yaml': '''
      description: Pir_Hcsr501 sensor
      compatible: "demol,pir_hcsr501"
      
      properties:
        OUT-gpios:
          type: phandle-array
          required: true
          description: GPIO OUT pin
  
    ''',
    'prj.conf': '''
      # Generated by demol
      CONFIG_PIR_HCSR501=y
      # MQTT client stack (T16 — skeleton only)
      CONFIG_NET_IPV4=y
      CONFIG_NET_TCP=y
      CONFIG_NET_SOCKETS=y
      CONFIG_NET_SOCKETS_OFFLOAD=n
      CONFIG_NET_DHCPV4=y
      CONFIG_MQTT_LIB=y
  
    ''',
    'src/main.c': '''
      /*
       * Zephyr application entry point.
       * Generated by demol -- driver logic is added in a later task.
       */
      
      #include <zephyr/kernel.h>
      #include <zephyr/net/mqtt.h>
      #include <zephyr/net/socket.h>
      
      static struct mqtt_client client;
      
      static void mqtt_init(void)
      {
              /* T16 skeleton: broker.connect, client.init.
               * Full publish loop is implemented in a later task.
               */
      }
      
      int main(void)
      {
              mqtt_init();
              return 0;
      }
  
    ''',
    'src/pir_hcsr501.c': '''
      /*
       * Zephyr PIR_HCSR501 driver (GPIO motion sensor).
       * Generated by demol — uses Zephyr's gpio_dt_spec for digital input.
       */
      
      #include <zephyr/device.h>
      #include <zephyr/drivers/gpio.h>
      
      #include "pir_hcsr501.h"
      
      static const struct gpio_dt_spec pir = GPIO_DT_SPEC_GET(DT_INST(0, demol_pir_hcsr501), gpios);
      
      int pir_hcsr501_init(void)
      {
          if (!gpio_is_ready_dt(&pir)) {
              return -ENODEV;
          }
          return gpio_pin_configure_dt(&pir, GPIO_INPUT);
      }
      
      int pir_hcsr501_read(bool *motion)
      {
          int val = gpio_pin_get_dt(&pir);
          if (val < 0) {
              return val;
          }
          *motion = (val != 0);
          return 0;
      }
    ''',
  })
# ---
# name: test_zephyr_codegen_golden[wemos_a][wemos_a]
  dict({
    'CMakeLists.txt': '''
      cmake_minimum_required(VERSION 3.20.0)
      find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
      project(wemosd1mini)
      target_sources(app PRIVATE src/main.c)
      target_include_directories(app PRIVATE src/include)
    ''',
    'boards/wemosd1mini.overlay': '''
      /* Generated by demol */
      / {
          hcsr04p_0: hcsr04p_0 {
              compatible = "demol,hcsr04p";
              status = "okay";
              trigger-gpios = <&gpio0 0 GPIO_ACTIVE_HIGH>;
              echo-gpios = <&gpio0 0 GPIO_ACTIVE_HIGH>;
          };
      };
  
    ''',
    'dts/bindings/demol-hcsr04p.yaml': '''
      description: Hcsr04P sensor
      compatible: "demol,hcsr04p"
      
      properties:
        trigger-gpios:
          type: phandle-array
          required: true
          description: GPIO trigger pin
  
    ''',
    'prj.conf': '''
      # Generated by demol
      # MQTT client stack (T16 — skeleton only)
      CONFIG_NET_IPV4=y
      CONFIG_NET_TCP=y
      CONFIG_NET_SOCKETS=y
      CONFIG_NET_SOCKETS_OFFLOAD=n
      CONFIG_NET_DHCPV4=y
      CONFIG_MQTT_LIB=y
  
    ''',
    'src/main.c': '''
      /*
       * Zephyr application entry point.
       * Generated by demol -- driver logic is added in a later task.
       */
      
      #include <zephyr/kernel.h>
      #include <zephyr/net/mqtt.h>
      #include <zephyr/net/socket.h>
      
      static struct mqtt_client client;
      
      static void mqtt_init(void)
      {
              /* T16 skeleton: broker.connect, client.init.
               * Full publish loop is implemented in a later task.
               */
      }
      
      int main(void)
      {
              mqtt_init();
              return 0;
      }
  
    ''',
  })
# ---
# name: test_zephyr_codegen_golden[wemos_bh1750][wemos_bh1750]
  dict({
    'CMakeLists.txt': '''
      cmake_minimum_required(VERSION 3.20.0)
      find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
      project(wemosd1mini)
      target_sources(app PRIVATE src/main.c src/bh1750.c)
      target_include_directories(app PRIVATE src/include)
    ''',
    'boards/wemosd1mini.overlay': '''
      /* Generated by demol */
      &i2c0 { bh1750@0x23 { status = "okay"; reg = <0x23>; compatible = "rohm,bh1750"; }; };
  
    ''',
    'prj.conf': '''
      # Generated by demol
      CONFIG_BH1750=y
      # MQTT client stack (T16 — skeleton only)
      CONFIG_NET_IPV4=y
      CONFIG_NET_TCP=y
      CONFIG_NET_SOCKETS=y
      CONFIG_NET_SOCKETS_OFFLOAD=n
      CONFIG_NET_DHCPV4=y
      CONFIG_MQTT_LIB=y
  
    ''',
    'src/bh1750.c': '''
      /*
       * Zephyr BH1750 driver (ambient light sensor).
       * Generated by demol — uses Zephyr's built-in rohm,bh1750 sensor
       * driver via the unified sensor_sample_fetch / sensor_channel_get API.
       */
      
      #include <zephyr/device.h>
      #include <zephyr/drivers/sensor.h>
      
      #include "bh1750.h"
      
      static const struct device *bh1750_dev = DEVICE_DT_GET(DT_INST(0, rohm_bh1750));
      
      int bh1750_init(void)
      {
          if (!device_is_ready(bh1750_dev)) {
              return -ENODEV;
          }
          return 0;
      }
      
      int bh1750_read(struct bh1750_data *data)
      {
          struct sensor_value lux = {0};
      
          if (sensor_sample_fetch(bh1750_dev) < 0) {
              return -EIO;
          }
      
          sensor_channel_get(bh1750_dev, SENSOR_CHAN_LIGHT, &lux);
      
          data->illuminance = sensor_value_to_double(&lux);
          return 0;
      }
    ''',
    'src/main.c': '''
      /*
       * Zephyr application entry point.
       * Generated by demol -- driver logic is added in a later task.
       */
      
      #include <zephyr/kernel.h>
      #include <zephyr/net/mqtt.h>
      #include <zephyr/net/socket.h>
      
      static struct mqtt_client client;
      
      static void mqtt_init(void)
      {
              /* T16 skeleton: broker.connect, client.init.
               * Full publish loop is implemented in a later task.
               */
      }
      
      int main(void)
      {
              mqtt_init();
              return 0;
      }
  
    ''',
  })
# ---
# name: test_zephyr_codegen_golden[wemos_bme280][wemos_bme280]
  dict({
    'CMakeLists.txt': '''
      cmake_minimum_required(VERSION 3.20.0)
      find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
      project(wemosd1mini)
      target_sources(app PRIVATE src/main.c src/bme280.c)
      target_include_directories(app PRIVATE src/include)
    ''',
    'boards/wemosd1mini.overlay': '''
      /* Generated by demol */
      &i2c0 { bme280@0x76 { status = "okay"; reg = <0x76>; compatible = "bosch,bme280"; }; };
  
    ''',
    'prj.conf': '''
      # Generated by demol
      CONFIG_BME280=y
      # MQTT client stack (T16 — skeleton only)
      CONFIG_NET_IPV4=y
      CONFIG_NET_TCP=y
      CONFIG_NET_SOCKETS=y
      CONFIG_NET_SOCKETS_OFFLOAD=n
      CONFIG_NET_DHCPV4=y
      CONFIG_MQTT_LIB=y
  
    ''',
    'src/bme280.c': '''
      /*
       * Zephyr BME280 driver (env sensor: temperature, pressure, humidity).
       * Generated by demol — uses Zephyr's built-in bosch,bme280 sensor
       * driver via the unified sensor_sample_fetch / sensor_channel_get API.
       */
      
      #include <zephyr/device.h>
      #include <zephyr/drivers/sensor.h>
      
      #include "bme280.h"
      
      static const struct device *bme280_dev = DEVICE_DT_GET(DT_INST(0, bosch_bme280));
      
      int bme280_init(void)
      {
          if (!device_is_ready(bme280_dev)) {
              return -ENODEV;
          }
          return 0;
      }
      
      int bme280_read(struct bme280_data *data)
      {
          struct sensor_value t = {0};
          struct sensor_value p = {0};
          struct sensor_value h = {0};
      
          if (sensor_sample_fetch(bme280_dev) < 0) {
              return -EIO;
          }
      
          sensor_channel_get(bme280_dev, SENSOR_CHAN_AMBIENT_TEMP, &t);
          sensor_channel_get(bme280_dev, SENSOR_CHAN_PRESS, &p);
          sensor_channel_get(bme280_dev, SENSOR_CHAN_HUMIDITY, &h);
      
          data->temperature = sensor_value_to_double(&t);
          data->pressure    = sensor_value_to_double(&p);
          data->humidity    = sensor_value_to_double(&h);
          return 0;
      }
    ''',
    'src/main.c': '''
      /*
       * Zephyr application entry point.
       * Generated by demol -- driver logic is added in a later task.
       */
      
      #include <zephyr/kernel.h>
      #include <zephyr/net/mqtt.h>
      #include <zephyr/net/socket.h>
      
      static struct mqtt_client client;
      
      static void mqtt_init(void)
      {
              /* T16 skeleton: broker.connect, client.init.
               * Full publish loop is implemented in a later task.
               */
      }
      
      int main(void)
      {
              mqtt_init();
              return 0;
      }
  
    ''',
  })
# ---
# name: test_zephyr_codegen_golden[wemos_bme680][wemos_bme680]
  dict({
    'CMakeLists.txt': '''
      cmake_minimum_required(VERSION 3.20.0)
      find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
      project(wemosd1mini)
      target_sources(app PRIVATE src/main.c src/bme680.c)
      target_include_directories(app PRIVATE src/include)
    ''',
    'boards/wemosd1mini.overlay': '''
      /* Generated by demol */
      &i2c0 { bme680@0x76 { status = "okay"; reg = <0x76>; compatible = "bosch,bme680"; }; };
  
    ''',
    'prj.conf': '''
      # Generated by demol
      CONFIG_BME680=y
      # MQTT client stack (T16 — skeleton only)
      CONFIG_NET_IPV4=y
      CONFIG_NET_TCP=y
      CONFIG_NET_SOCKETS=y
      CONFIG_NET_SOCKETS_OFFLOAD=n
      CONFIG_NET_DHCPV4=y
      CONFIG_MQTT_LIB=y
  
    ''',
    'src/bme680.c': '''
      /*
       * Zephyr BME680 driver (env sensor: temperature, pressure, humidity).
       * Generated by demol — uses Zephyr's built-in bosch,bme680 sensor
       * driver via the unified sensor_sample_fetch / sensor_channel_get API.
       */
      
      #include <zephyr/device.h>
      #include <zephyr/drivers/sensor.h>
      #include <zephyr/drivers/sensor/bme680.h>
      
      #include "bme680.h"
      
      static const struct device *bme680_dev = DEVICE_DT_GET(DT_INST(0, bosch_bme680));
      
      int bme680_init(void)
      {
          if (!device_is_ready(bme680_dev)) {
              return -ENODEV;
          }
          return 0;
      }
      
      int bme680_read(struct bme680_data *data)
      {
          struct sensor_value t = {0};
          struct sensor_value p = {0};
          struct sensor_value h = {0};
      
          if (sensor_sample_fetch(bme680_dev) < 0) {
              return -EIO;
          }
      
          sensor_channel_get(bme680_dev, SENSOR_CHAN_AMBIENT_TEMP, &t);
          sensor_channel_get(bme680_dev, SENSOR_CHAN_PRESS, &p);
          sensor_channel_get(bme680_dev, SENSOR_CHAN_HUMIDITY, &h);
      
          data->temperature = sensor_value_to_double(&t);
          data->pressure    = sensor_value_to_double(&p);
          data->humidity    = sensor_value_to_double(&h);
          return 0;
      }
    ''',
    'src/main.c': '''
      /*
       * Zephyr application entry point.
       * Generated by demol -- driver logic is added in a later task.
       */
      
      #include <zephyr/kernel.h>
      #include <zephyr/net/mqtt.h>
      #include <zephyr/net/socket.h>
      
      static struct mqtt_client client;
      
      static void mqtt_init(void)
      {
              /* T16 skeleton: broker.connect, client.init.
               * Full publish loop is implemented in a later task.
               */
      }
      
      int main(void)
      {
              mqtt_init();
              return 0;
      }
  
    ''',
  })
# ---
# name: test_zephyr_codegen_golden[wemos_bme680_alert][wemos_bme680_alert]
  dict({
    'CMakeLists.txt': '''
      cmake_minimum_required(VERSION 3.20.0)
      find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
      project(wemosd1mini)
      target_sources(app PRIVATE src/main.c src/bme680.c)
      target_include_directories(app PRIVATE src/include)
    ''',
    'boards/wemosd1mini.overlay': '''
      /* Generated by demol */
      &i2c0 { bme680@0x76 { status = "okay"; reg = <0x76>; compatible = "bosch,bme680"; }; };
  
    ''',
    'prj.conf': '''
      # Generated by demol
      CONFIG_BME680=y
      # MQTT client stack (T16 — skeleton only)
      CONFIG_NET_IPV4=y
      CONFIG_NET_TCP=y
      CONFIG_NET_SOCKETS=y
      CONFIG_NET_SOCKETS_OFFLOAD=n
      CONFIG_NET_DHCPV4=y
      CONFIG_MQTT_LIB=y
  
    ''',
    'src/bme680.c': '''
      /*
       * Zephyr BME680 driver (env sensor: temperature, pressure, humidity).
       * Generated by demol — uses Zephyr's built-in bosch,bme680 sensor
       * driver via the unified sensor_sample_fetch / sensor_channel_get API.
       */
      
      #include <zephyr/device.h>
      #include <zephyr/drivers/sensor.h>
      #include <zephyr/drivers/sensor/bme680.h>
      
      #include "bme680.h"
      
      static const struct device *bme680_dev = DEVICE_DT_GET(DT_INST(0, bosch_bme680));
      
      int bme680_init(void)
      {
          if (!device_is_ready(bme680_dev)) {
              return -ENODEV;
          }
          return 0;
      }
      
      int bme680_read(struct bme680_data *data)
      {
          struct sensor_value t = {0};
          struct sensor_value p = {0};
          struct sensor_value h = {0};
      
          if (sensor_sample_fetch(bme680_dev) < 0) {
              return -EIO;
          }
      
          sensor_channel_get(bme680_dev, SENSOR_CHAN_AMBIENT_TEMP, &t);
          sensor_channel_get(bme680_dev, SENSOR_CHAN_PRESS, &p);
          sensor_channel_get(bme680_dev, SENSOR_CHAN_HUMIDITY, &h);
      
          data->temperature = sensor_value_to_double(&t);
          data->pressure    = sensor_value_to_double(&p);
          data->humidity    = sensor_value_to_double(&h);
          return 0;
      }
    ''',
    'src/main.c': '''
      #include "bme680.h"
      #include <zephyr/logging/log.h>
      /*
       * Zephyr application entry point.
       * Generated by demol -- ALERT trigger loop.
       */
      
      #include <zephyr/kernel.h>
      LOG_MODULE_REGISTER(app, LOG_LEVEL_INF);
      
      static struct bme680_data bme680_data = {0};
      static int64_t last_trigger_fever_alert_ms = 0;
      static int64_t last_trigger_humid_alert_ms = 0;
      
      void check_alerts(void)
      {
      	int64_t now_ms = k_uptime_get();
      	/* ALERT fever_alert on bme680 -- publish "my_wemos.alerts.fever" */
      	if ((bme680_data.temperature) > 38.5) {
      		if (last_trigger_fever_alert_ms == 0 ||
      		    (now_ms - last_trigger_fever_alert_ms) >= 60000) {
      			last_trigger_fever_alert_ms = now_ms;
      			LOG_INF("ALERT fever_alert: PUBLISH to my_wemos.alerts.fever");
      		}
      	}
      	/* ALERT humid_alert on bme680 -- publish "my_wemos.alerts.humidity" */
      	if ((bme680_data.humidity) > 75.0) {
      		if (last_trigger_humid_alert_ms == 0 ||
      		    (now_ms - last_trigger_humid_alert_ms) >= 30000) {
      			last_trigger_humid_alert_ms = now_ms;
      			LOG_INF("ALERT humid_alert: PUBLISH to my_wemos.alerts.humidity");
      		}
      	}
      }
      
      int main(void)
      {
      	while (1) {
      		check_alerts();
      		k_msleep(1000);
      	}
      	return 0;
      }
    ''',
  })
# ---
# name: test_zephyr_codegen_golden[wemos_button][wemos_button]
  dict({
    'CMakeLists.txt': '''
      cmake_minimum_required(VERSION 3.20.0)
      find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
      project(wemosd1mini)
      target_sources(app PRIVATE src/main.c src/tactilebutton.c)
      target_include_directories(app PRIVATE src/include)
    ''',
    'boards/wemosd1mini.overlay': '''
      /* Generated by demol */
      / {
          tactilebutton_0: tactilebutton_0 {
              compatible = "demol,tactilebutton";
              status = "okay";
              state-gpios = <&gpio0 0 GPIO_ACTIVE_HIGH>;
          };
      };
  
    ''',
    'dts/bindings/demol-tactilebutton.yaml': '''
      description: Tactilebutton sensor
      compatible: "demol,tactilebutton"
      
      properties:
        state-gpios:
          type: phandle-array
          required: true
          description: GPIO state pin
  
    ''',
    'prj.conf': '''
      # Generated by demol
      CONFIG_GPIO=y
      # MQTT client stack (T16 — skeleton only)
      CONFIG_NET_IPV4=y
      CONFIG_NET_TCP=y
      CONFIG_NET_SOCKETS=y
      CONFIG_NET_SOCKETS_OFFLOAD=n
      CONFIG_NET_DHCPV4=y
      CONFIG_MQTT_LIB=y
  
    ''',
    'src/button.c': '''
      /*
       * Zephyr tactile button driver (GPIO input with interrupt).
       * Generated by demol — uses Zephyr's gpio_dt_spec + gpio_add_callback.
       */
      
      #include <zephyr/device.h>
      #include <zephyr/drivers/gpio.h>
      
      #include "button.h"
      
      static const struct gpio_dt_spec button = GPIO_DT_SPEC_GET(DT_INST(0, gpio_keys), gpios);
      static struct gpio_callback button_cb;
      static void (*button_user_cb)(void);
      
      static void button_pressed(const struct device *dev, struct gpio_callback *cb, uint32_t pins)
      {
          ARG_UNUSED(dev);
          ARG_UNUSED(cb);
          ARG_UNUSED(pins);
          if (button_user_cb) {
              button_user_cb();
          }
      }
      
      int button_init(void (*callback)(void))
      {
          int ret;
      
          if (!gpio_is_ready_dt(&button)) {
              return -ENODEV;
          }
      
          button_user_cb = callback;
      
          ret = gpio_pin_configure_dt(&button, GPIO_INPUT);
          if (ret < 0) {
              return ret;
          }
      
          gpio_init_callback(&button_cb, button_pressed, BIT(button.pin));
          ret = gpio_add_callback(button.port, &button_cb);
          if (ret < 0) {
              return ret;
          }
      
          return gpio_pin_interrupt_configure_dt(&button, GPIO_INT_EDGE_TO_ACTIVE);
      }
    ''',
    'src/main.c': '''
      /*
       * Zephyr application entry point.
       * Generated by demol -- driver logic is added in a later task.
       */
      
      #include <zephyr/kernel.h>
      #include <zephyr/net/mqtt.h>
      #include <zephyr/net/socket.h>
      
      static struct mqtt_client client;
      
      static void mqtt_init(void)
      {
              /* T16 skeleton: broker.connect, client.init.
               * Full publish loop is implemented in a later task.
               */
      }
      
      int main(void)
      {
              mqtt_init();
              return 0;
      }
  
    ''',
  })
# ---
# name: test_zephyr_codegen_golden[wemos_constraint_bme680][wemos_constraint_bme680]
  dict({
    'CMakeLists.txt': '''
      cmake_minimum_required(VERSION 3.20.0)
      find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
      project(wemosd1mini)
      target_sources(app PRIVATE src/main.c src/bme680.c src/constraint.c)
      target_include_directories(app PRIVATE src/include)
    ''',
    'boards/wemosd1mini.overlay': '''
      /* Generated by demol */
      &i2c0 { bme680@0x76 { status = "okay"; reg = <0x76>; compatible = "bosch,bme680"; }; };
  
    ''',
    'prj.conf': '''
      # Generated by demol
      CONFIG_BME680=y
      # MQTT client stack (T16 — skeleton only)
      CONFIG_NET_IPV4=y
      CONFIG_NET_TCP=y
      CONFIG_NET_SOCKETS=y
      CONFIG_NET_SOCKETS_OFFLOAD=n
      CONFIG_NET_DHCPV4=y
      CONFIG_MQTT_LIB=y
  
    ''',
    'src/bme680.c': '''
      /*
       * Zephyr BME680 driver (env sensor: temperature, pressure, humidity).
       * Generated by demol — uses Zephyr's built-in bosch,bme680 sensor
       * driver via the unified sensor_sample_fetch / sensor_channel_get API.
       */
      
      #include <zephyr/device.h>
      #include <zephyr/drivers/sensor.h>
      #include <zephyr/drivers/sensor/bme680.h>
      
      #include "bme680.h"
      
      static const struct device *bme680_dev = DEVICE_DT_GET(DT_INST(0, bosch_bme680));
      
      int bme680_init(void)
      {
          if (!device_is_ready(bme680_dev)) {
              return -ENODEV;
          }
          return 0;
      }
      
      int bme680_read(struct bme680_data *data)
      {
          struct sensor_value t = {0};
          struct sensor_value p = {0};
          struct sensor_value h = {0};
      
          if (sensor_sample_fetch(bme680_dev) < 0) {
              return -EIO;
          }
      
          sensor_channel_get(bme680_dev, SENSOR_CHAN_AMBIENT_TEMP, &t);
          sensor_channel_get(bme680_dev, SENSOR_CHAN_PRESS, &p);
          sensor_channel_get(bme680_dev, SENSOR_CHAN_HUMIDITY, &h);
      
          data->temperature = sensor_value_to_double(&t);
          data->pressure    = sensor_value_to_double(&p);
          data->humidity    = sensor_value_to_double(&h);
          return 0;
      }
    ''',
    'src/constraint.c': '''
      /*
       * Zephyr CONSTRAINT runtime — implementation.
       * Generated by demol for WemosConstraintBME680.
       *
       * Threading model:
       *   - constraint_mutex guards _devices[] and _device_count.
       *   - register_peripheral() is safe to call from any Zephyr thread.
       *   - The periodic check is dispatched on the system workqueue via
       *     k_work_delayable, with a 10-second default interval.
       *
       * Failure action (per design doc §4.3):
       *   - LOG_WRN with the constraint name and message.
       *   - atomic_inc(&constraint_failures) for downstream ALERT triggers.
       */
      #include <zephyr/kernel.h>
      #include <zephyr/logging/log.h>
      
      #include "constraint.h"
      
      LOG_MODULE_REGISTER(constraint, LOG_LEVEL_WRN);
      
      #define CONSTRAINT_CHECK_INTERVAL_S 10
      
      K_MUTEX_DEFINE(constraint_mutex);
      atomic_t constraint_failures = ATOMIC_INIT(0);
      
      static struct periph_state _devices[DEMOL_MAX_PERIPHERALS];
      static uint8_t _device_count = 0;
      
      static struct k_work_delayable _constraint_work;
      
      /* Predicate for CONSTRAINT power_ok: Total peripheral power exceeds 100 mW budget */
      bool _eval_constraint_power_ok(void)
      {
      	return (((_sum_power_mW()) < (100)));
      }
      
      struct constraint_entry {
      	const char *name;
      	const char *message;
      	bool (*eval)(void);
      };
      
      static const struct constraint_entry _constraints[] = {
      	{ "power_ok", "Total peripheral power exceeds 100 mW budget", _eval_constraint_power_ok },
      };
      #define _CONSTRAINT_COUNT (sizeof(_constraints) / sizeof(_constraints[0]))
      
      /* ---------------------------------------------------------------------- */
      /* Helpers guarded by constraint_mutex                                     */
      /* ---------------------------------------------------------------------- */
      
      static uint8_t _count_kind(uint8_t kind)
      {
      	uint8_t n = 0;
      
      	k_mutex_lock(&constraint_mutex, K_FOREVER);
      	for (uint8_t i = 0; i < _device_count; i++) {
      		if (_devices[i].kind == kind) {
      			n++;
      		}
      	}
      	k_mutex_unlock(&constraint_mutex);
      	return n;
      }
      
      static uint8_t _count_connected(void)
      {
      	uint8_t n = 0;
      
      	k_mutex_lock(&constraint_mutex, K_FOREVER);
      	for (uint8_t i = 0; i < _device_count; i++) {
      		if (_devices[i].connected) {
      			n++;
      		}
      	}
      	k_mutex_unlock(&constraint_mutex);
      	return n;
      }
      
      static int32_t _sum_power_mW(void)
      {
      	int32_t total = 0;
      
      	k_mutex_lock(&constraint_mutex, K_FOREVER);
      	for (uint8_t i = 0; i < _device_count; i++) {
      		if (_devices[i].power_mW >= 0) {
      			total += _devices[i].power_mW;
      		}
      	}
      	k_mutex_unlock(&constraint_mutex);
      	return total;
      }
      
      static int32_t _max_power_mW(void)
      {
      	int32_t peak = 0;
      
      	k_mutex_lock(&constraint_mutex, K_FOREVER);
      	for (uint8_t i = 0; i < _device_count; i++) {
      		if (_devices[i].power_mW > peak) {
      			peak = _devices[i].power_mW;
      		}
      	}
      	k_mutex_unlock(&constraint_mutex);
      	return peak;
      }
      
      void register_peripheral(const char *name, uint8_t kind, int32_t power_mW)
      {
      	k_mutex_lock(&constraint_mutex, K_FOREVER);
      	if (_device_count < DEMOL_MAX_PERIPHERALS) {
      		_devices[_device_count].name = name;
      		_devices[_device_count].kind = kind;
      		_devices[_device_count].power_mW = power_mW;
      		_devices[_device_count].connected = true;
      		_device_count++;
      	}
      	k_mutex_unlock(&constraint_mutex);
      }
      
      static void _constraint_work_handler(struct k_work *work)
      {
      	ARG_UNUSED(work);
      	check_constraints();
      	k_work_schedule(&_constraint_work, K_SECONDS(CONSTRAINT_CHECK_INTERVAL_S));
      }
      
      void constraint_init(void)
      {
      	k_work_schedule(&_constraint_work, K_SECONDS(CONSTRAINT_CHECK_INTERVAL_S));
      }
      
      void check_constraints(void)
      {
      	/* _constraints[] is a const table populated at init time, so we
      	 * don't need to hold constraint_mutex while iterating. Each
      	 * predicate function internally takes the lock when it reads
      	 * _devices[]. */
      	for (size_t i = 0; i < _CONSTRAINT_COUNT; i++) {
      		const struct constraint_entry *c = &_constraints[i];
      
      		if (c->eval()) {
      			continue;
      		}
      		atomic_inc(&constraint_failures);
      		LOG_WRN("[Constraint-Violated] %s: %s",
      			c->name,
      			c->message ? c->message : "expression is false");
      	}
      }
    ''',
    'src/constraint.h': '''
      /*
       * Zephyr CONSTRAINT runtime — public API.
       * Generated by demol for WemosConstraintBME680.
       *
       * Each declared CONSTRAINT becomes a predicate function that the periodic
       * k_work_delayable callback invokes via check_constraints(). The state mutex
       * is exposed so peripheral drivers can register themselves safely from any
       * Zephyr thread context.
       */
      #ifndef DEMOL_CONSTRAINT_H_
      #define DEMOL_CONSTRAINT_H_
      
      #include <zephyr/kernel.h>
      
      #ifdef __cplusplus
      extern "C" {
      #endif
      
      /* Maximum number of peripherals tracked by the constraint runtime. Mirrors
       * the design doc §4.1 value and is shared with constraint.c. */
      #ifndef DEMOL_MAX_PERIPHERALS
      #define DEMOL_MAX_PERIPHERALS 16
      #endif
      
      /* Peripheral kind codes used by the constraint runtime. Values match the
       * built-in function table in docs/constraint-runtime-design.md §4.1. */
      #define DEMOL_KIND_SENSOR     0
      #define DEMOL_KIND_ACTUATOR   1
      #define DEMOL_KIND_PERIPHERAL 2
      
      /* Per-peripheral runtime state. Drivers call register_peripheral() to fill
       * their slot; the constraint predicates then read these fields under
       * constraint_mutex. */
      struct periph_state {
      	const char *name;
      	uint8_t kind;
      	int32_t power_mW;     /* -1 if unknown / not measured */
      	bool connected;
      };
      
      /* Process-wide mutex protecting _devices[]. Drivers acquire it inside
       * register_peripheral() so the table stays consistent under concurrent
       * registration. */
      extern struct k_mutex constraint_mutex;
      
      /* Process-wide counter of constraint failures. Read by check_constraints()
       * on each tick, and exposed for the ALERT subsystem to query. */
      extern atomic_t constraint_failures;
      
      /* Register a peripheral with the constraint runtime. Must be called once
       * per peripheral during its init path. power_mW == -1 means "unknown". */
      void register_peripheral(const char *name, uint8_t kind, int32_t power_mW);
      
      /* Initialise the constraint runtime. Call from main() before k_sleep().
       * Schedules the periodic check work item. */
      void constraint_init(void);
      
      /* Evaluate every declared CONSTRAINT and log/inc on failure. Safe to call
       * from any thread; acquires constraint_mutex briefly per predicate. */
      void check_constraints(void);
      
      /* Predicate for CONSTRAINT power_ok. */
      bool _eval_constraint_power_ok(void);
      
      #ifdef __cplusplus
      }
      #endif
      
      #endif /* DEMOL_CONSTRAINT_H_ */
    ''',
    'src/main.c': '''
      /*
       * Zephyr application entry point.
       * Generated by demol -- driver logic is added in a later task.
       */
      
      #include <zephyr/kernel.h>
      #include <zephyr/net/mqtt.h>
      #include <zephyr/net/socket.h>
      
      static struct mqtt_client client;
      
      static void mqtt_init(void)
      {
              /* T16 skeleton: broker.connect, client.init.
               * Full publish loop is implemented in a later task.
               */
      }
      
      int main(void)
      {
              mqtt_init();
              return 0;
      }
  
    ''',
  })
# ---
# name: test_zephyr_codegen_golden[wemos_dht22][wemos_dht22]
  dict({
    'CMakeLists.txt': '''
      cmake_minimum_required(VERSION 3.20.0)
      find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
      project(wemosd1mini)
      target_sources(app PRIVATE src/main.c src/dht22.c)
      target_include_directories(app PRIVATE src/include)
    ''',
    'boards/wemosd1mini.overlay': '''
      /* Generated by demol */
      / {
          dht22_0: dht22_0 {
              compatible = "demol,dht22";
              status = "okay";
              data-gpios = <&gpio0 0 GPIO_ACTIVE_HIGH>;
          };
      };
  
    ''',
    'dts/bindings/demol-dht22.yaml': '''
      description: Dht22 sensor
      compatible: "demol,dht22"
      
      properties:
        data-gpios:
          type: phandle-array
          required: true
          description: GPIO data pin
  
    ''',
    'prj.conf': '''
      # Generated by demol
      CONFIG_DHT22=y
      # MQTT client stack (T16 — skeleton only)
      CONFIG_NET_IPV4=y
      CONFIG_NET_TCP=y
      CONFIG_NET_SOCKETS=y
      CONFIG_NET_SOCKETS_OFFLOAD=n
      CONFIG_NET_DHCPV4=y
      CONFIG_MQTT_LIB=y
  
    ''',
    'src/dht22.c': '''
      /*
       * Zephyr DHT22 driver (GPIO bit-bang temperature/humidity sensor).
       * Generated by demol — implements the timing-sensitive DHT22 protocol
       * using Zephyr GPIO API with microsecond-precision delays.
       */
      
      #include <zephyr/kernel.h>
      #include <zephyr/device.h>
      #include <zephyr/drivers/gpio.h>
      
      #include "dht22.h"
      
      /* ------------------------------------------------------------------
       * Devicetree reference — expects a node with compatible = "demol,dht22"
       * and a "data-gpios" phandle-array property in the board overlay.
       * ---------------------------------------------------------------- */
      static const struct gpio_dt_spec dht22_data =
          GPIO_DT_SPEC_GET(DT_INST(0, demol_dht22), data_gpios);
      
      /* ------------------------------------------------------------------
       * Protocol timing constants (microseconds).
       *
       *           Minimum  Typical  Maximum
       * Start LOW    800    1000    10000
       * Start HIGH    20      30       50
       * Response LOW  75      80      100
       * Response HIGH 75      80      100
       * Bit LOW       48      50       56
       * Bit "0" HIGH  22      26       30
       * Bit "1" HIGH  68      70       75
       * ---------------------------------------------------------------- */
      #define DHT22_START_LOW_US      1800
      #define DHT22_START_HIGH_US      30
      #define DHT22_RESPONSE_WAIT_US  120
      #define DHT22_BIT_LOW_MIN_US     30
      #define DHT22_BIT_SAMPLE_US      40
      #define DHT22_RECOVERY_MS         1
      
      /* ------------------------------------------------------------------
       * Data structure returned by dht22_read().
       * ---------------------------------------------------------------- */
      struct dht22_data {
          double temperature;
          double humidity;
      };
      
      /* ------------------------------------------------------------------
       * dht22_init — configure the data pin, pull high (idle state).
       * ---------------------------------------------------------------- */
      int dht22_init(void)
      {
          if (!device_is_ready(dht22_data.port)) {
              return -ENODEV;
          }
      
          /* Start in output-high (idle bus state for DHT22).
           * GPIO_OPEN_DRAIN + pull-up would be ideal but we manage the
           * pin direction manually for precise timing control. */
          gpio_pin_configure_dt(&dht22_data, GPIO_OUTPUT_HIGH);
          return 0;
      }
      
      /* ------------------------------------------------------------------
       * dht22_pulse_in — measure the width of a HIGH pulse (in �s).
       * Returns 0 on timeout.
       * ---------------------------------------------------------------- */
      static uint32_t dht22_pulse_in(void)
      {
          uint32_t width = 0;
      
          /* Wait for pin to go HIGH */
          for (int i = 0; i < DHT22_RESPONSE_WAIT_US; i++) {
              if (gpio_pin_get_dt(&dht22_data)) {
                  break;
              }
              k_busy_wait(1);
              if (++width > DHT22_RESPONSE_WAIT_US) {
                  return 0;
              }
          }
      
          /* Measure how long it stays HIGH */
          width = 0;
          for (int i = 0; i < DHT22_RESPONSE_WAIT_US; i++) {
              if (!gpio_pin_get_dt(&dht22_data)) {
                  break;
              }
              k_busy_wait(1);
              if (++width > DHT22_RESPONSE_WAIT_US) {
                  return 0;
              }
          }
      
          return width;
      }
      
      /* ------------------------------------------------------------------
       * dht22_read_raw — send start signal, receive 40-bit frame.
       *
       * Returns 0 on success, -EIO on timeout or checksum mismatch.
       * ---------------------------------------------------------------- */
      static int dht22_read_raw(uint8_t buf[5])
      {
          int ret;
      
          /* ---- Send start signal ---- */
          gpio_pin_configure_dt(&dht22_data, GPIO_OUTPUT);
          gpio_pin_set_dt(&dht22_data, 0);
          k_busy_wait(DHT22_START_LOW_US);
          gpio_pin_set_dt(&dht22_data, 1);
          k_busy_wait(DHT22_START_HIGH_US);
      
          /* Switch to input — DHT22 will drive the bus */
          gpio_pin_configure_dt(&dht22_data, GPIO_INPUT);
      
          /* ---- Wait for DHT22 response pulse ---- */
          /* LOW pulse (DHT22 pulls low ~80 us) */
          ret = gpio_pin_get_dt(&dht22_data) == 0;
          for (int i = 0; i < DHT22_RESPONSE_WAIT_US; i++) {
              if (gpio_pin_get_dt(&dht22_data)) {
                  break;
              }
              k_busy_wait(1);
          }
      
          /* HIGH pulse (DHT22 pulls high ~80 us) */
          for (int i = 0; i < DHT22_RESPONSE_WAIT_US; i++) {
              if (!gpio_pin_get_dt(&dht22_data)) {
                  break;
              }
              k_busy_wait(1);
          }
      
          /* ---- Read 40 data bits ---- */
          for (int bit = 0; bit < 40; bit++) {
              /* Each bit starts with ~50 us LOW */
              for (int i = 0; i < 60; i++) {
                  if (gpio_pin_get_dt(&dht22_data)) {
                      break;
                  }
                  k_busy_wait(1);
              }
      
              /* Sample after ~40 us — short HIGH = 0, long HIGH = 1 */
              k_busy_wait(DHT22_BIT_SAMPLE_US);
      
              uint32_t val = gpio_pin_get_dt(&dht22_data);
      
              /* Wait for pin to go LOW again before next bit */
              for (int i = 0; i < 60; i++) {
                  if (!gpio_pin_get_dt(&dht22_data)) {
                      break;
                  }
                  k_busy_wait(1);
              }
      
              int byte_idx = bit / 8;
              buf[byte_idx] = (buf[byte_idx] << 1) | (val ? 1 : 0);
          }
      
          /* Return pin to idle (output, high) */
          gpio_pin_configure_dt(&dht22_data, GPIO_OUTPUT_HIGH);
      
          return 0;
      }
      
      /* ------------------------------------------------------------------
       * dht22_read — read temperature (�C) and humidity (%RH).
       *
       * Populates data->temperature and data->humidity as doubles.
       * Returns 0 on success, -EIO on failure.
       * ---------------------------------------------------------------- */
      int dht22_read(struct dht22_data *data)
      {
          uint8_t buf[5] = {0};
      
          if (!data) {
              return -EINVAL;
          }
      
          if (dht22_read_raw(buf) < 0) {
              return -EIO;
          }
      
          /* Verify checksum */
          uint8_t sum = buf[0] + buf[1] + buf[2] + buf[3];
          if ((sum & 0xFF) != buf[4]) {
              return -EIO;
          }
      
          /* Decode humidity (16 bits, integer.decimal) */
          uint16_t hum_raw = ((uint16_t)buf[0]) << 8 | buf[1];
          data->humidity = hum_raw * 0.1;
      
          /* Decode temperature (16 bits, signed, integer.decimal) */
          int16_t temp_raw = ((int16_t)(buf[2] & 0x7F)) << 8 | buf[3];
          if (buf[2] & 0x80) {
              temp_raw = -temp_raw;
          }
          data->temperature = temp_raw * 0.1;
      
          return 0;
      }
    ''',
    'src/main.c': '''
      /*
       * Zephyr application entry point.
       * Generated by demol -- driver logic is added in a later task.
       */
      
      #include <zephyr/kernel.h>
      #include <zephyr/net/mqtt.h>
      #include <zephyr/net/socket.h>
      
      static struct mqtt_client client;
      
      static void mqtt_init(void)
      {
              /* T16 skeleton: broker.connect, client.init.
               * Full publish loop is implemented in a later task.
               */
      }
      
      int main(void)
      {
              mqtt_init();
              return 0;
      }
  
    ''',
  })
# ---
# name: test_zephyr_codegen_golden[wemos_ds18b20][wemos_ds18b20]
  dict({
    'CMakeLists.txt': '''
      cmake_minimum_required(VERSION 3.20.0)
      find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
      project(wemosd1mini)
      target_sources(app PRIVATE src/main.c src/ds18b20.c)
      target_include_directories(app PRIVATE src/include)
    ''',
    'boards/wemosd1mini.overlay': '''
      /* Generated by demol */
      / {
          ds18b20_0: ds18b20_0 {
              compatible = "demol,ds18b20";
              status = "okay";
              data-gpios = <&gpio0 0 GPIO_ACTIVE_HIGH>;
          };
      };
  
    ''',
    'dts/bindings/demol-ds18b20.yaml': '''
      description: Ds18B20 sensor
      compatible: "demol,ds18b20"
      
      properties:
        data-gpios:
          type: phandle-array
          required: true
          description: GPIO data pin
  
    ''',
    'prj.conf': '''
      # Generated by demol
      CONFIG_DS18B20=y
      # MQTT client stack (T16 — skeleton only)
      CONFIG_NET_IPV4=y
      CONFIG_NET_TCP=y
      CONFIG_NET_SOCKETS=y
      CONFIG_NET_SOCKETS_OFFLOAD=n
      CONFIG_NET_DHCPV4=y
      CONFIG_MQTT_LIB=y
  
    ''',
    'src/ds18b20.c': '''
      /*
       * Zephyr DS18B20 driver (1-Wire temperature sensor).
       * Generated by demol — uses Zephyr's built-in maxim,ds18b20 sensor
       * driver via the unified sensor_sample_fetch / sensor_channel_get API.
       */
      
      #include <zephyr/device.h>
      #include <zephyr/drivers/sensor.h>
      
      #include "ds18b20.h"
      
      static const struct device *ds18b20_dev = DEVICE_DT_GET(DT_INST(0, maxim_ds18b20));
      
      int ds18b20_init(void)
      {
          if (!device_is_ready(ds18b20_dev)) {
              return -ENODEV;
          }
          return 0;
      }
      
      int ds18b20_read(struct ds18b20_data *data)
      {
          struct sensor_value t = {0};
      
          if (sensor_sample_fetch(ds18b20_dev) < 0) {
              return -EIO;
          }
      
          sensor_channel_get(ds18b20_dev, SENSOR_CHAN_AMBIENT_TEMP, &t);
      
          data->temperature = sensor_value_to_double(&t);
          return 0;
      }
    ''',
    'src/main.c': '''
      /*
       * Zephyr application entry point.
       * Generated by demol -- driver logic is added in a later task.
       */
      
      #include <zephyr/kernel.h>
      #include <zephyr/net/mqtt.h>
      #include <zephyr/net/socket.h>
      
      static struct mqtt_client client;
      
      static void mqtt_init(void)
      {
              /* T16 skeleton: broker.connect, client.init.
               * Full publish loop is implemented in a later task.
               */
      }
      
      int main(void)
      {
              mqtt_init();
              return 0;
      }
  
    ''',
  })
# ---
# name: test_zephyr_codegen_golden[wemos_mqtt_bme680][wemos_mqtt_bme680]
  dict({
    'CMakeLists.txt': '''
      cmake_minimum_required(VERSION 3.20.0)
      find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
      project(wemosd1r32)
      target_sources(app PRIVATE src/main.c src/bme680.c)
      target_include_directories(app PRIVATE src/include)
    ''',
    'boards/wemosd1r32.overlay': '''
      /* Generated by demol */
      &i2c0 { bme680@0x76 { status = "okay"; reg = <0x76>; compatible = "bosch,bme680"; }; };
  
    ''',
    'prj.conf': '''
      # Generated by demol
      CONFIG_BME680=y
      # MQTT client stack (T16 — skeleton only)
      CONFIG_NET_IPV4=y
      CONFIG_NET_TCP=y
      CONFIG_NET_SOCKETS=y
      CONFIG_NET_SOCKETS_OFFLOAD=n
      CONFIG_NET_DHCPV4=y
      CONFIG_MQTT_LIB=y
  
    ''',
    'src/bme680.c': '''
      /*
       * Zephyr BME680 driver (env sensor: temperature, pressure, humidity).
       * Generated by demol — uses Zephyr's built-in bosch,bme680 sensor
       * driver via the unified sensor_sample_fetch / sensor_channel_get API.
       */
      
      #include <zephyr/device.h>
      #include <zephyr/drivers/sensor.h>
      #include <zephyr/drivers/sensor/bme680.h>
      
      #include "bme680.h"
      
      static const struct device *bme680_dev = DEVICE_DT_GET(DT_INST(0, bosch_bme680));
      
      int bme680_init(void)
      {
          if (!device_is_ready(bme680_dev)) {
              return -ENODEV;
          }
          return 0;
      }
      
      int bme680_read(struct bme680_data *data)
      {
          struct sensor_value t = {0};
          struct sensor_value p = {0};
          struct sensor_value h = {0};
      
          if (sensor_sample_fetch(bme680_dev) < 0) {
              return -EIO;
          }
      
          sensor_channel_get(bme680_dev, SENSOR_CHAN_AMBIENT_TEMP, &t);
          sensor_channel_get(bme680_dev, SENSOR_CHAN_PRESS, &p);
          sensor_channel_get(bme680_dev, SENSOR_CHAN_HUMIDITY, &h);
      
          data->temperature = sensor_value_to_double(&t);
          data->pressure    = sensor_value_to_double(&p);
          data->humidity    = sensor_value_to_double(&h);
          return 0;
      }
    ''',
    'src/main.c': '''
      /*
       * Zephyr application entry point.
       * Generated by demol -- SAMPLING loop.
       */
      
      #include <zephyr/kernel.h>
      
      int main(void)
      {
      	while (1) {
      		k_msleep(100);
      		bme680_read();
      	}
      	return 0;
      }
    ''',
  })
# ---
# name: test_zephyr_codegen_golden[wemos_sampling_bme680][wemos_sampling_bme680]
  dict({
    'CMakeLists.txt': '''
      cmake_minimum_required(VERSION 3.20.0)
      find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
      project(wemosd1r32)
      target_sources(app PRIVATE src/main.c src/bme680.c)
      target_include_directories(app PRIVATE src/include)
    ''',
    'boards/wemosd1r32.overlay': '''
      /* Generated by demol */
      &i2c0 { bme680@0x76 { status = "okay"; reg = <0x76>; compatible = "bosch,bme680"; }; };
  
    ''',
    'prj.conf': '''
      # Generated by demol
      CONFIG_BME680=y
      # MQTT client stack (T16 — skeleton only)
      CONFIG_NET_IPV4=y
      CONFIG_NET_TCP=y
      CONFIG_NET_SOCKETS=y
      CONFIG_NET_SOCKETS_OFFLOAD=n
      CONFIG_NET_DHCPV4=y
      CONFIG_MQTT_LIB=y
  
    ''',
    'src/bme680.c': '''
      /*
       * Zephyr BME680 driver (env sensor: temperature, pressure, humidity).
       * Generated by demol — uses Zephyr's built-in bosch,bme680 sensor
       * driver via the unified sensor_sample_fetch / sensor_channel_get API.
       */
      
      #include <zephyr/device.h>
      #include <zephyr/drivers/sensor.h>
      #include <zephyr/drivers/sensor/bme680.h>
      
      #include "bme680.h"
      
      static const struct device *bme680_dev = DEVICE_DT_GET(DT_INST(0, bosch_bme680));
      
      int bme680_init(void)
      {
          if (!device_is_ready(bme680_dev)) {
              return -ENODEV;
          }
          return 0;
      }
      
      int bme680_read(struct bme680_data *data)
      {
          struct sensor_value t = {0};
          struct sensor_value p = {0};
          struct sensor_value h = {0};
      
          if (sensor_sample_fetch(bme680_dev) < 0) {
              return -EIO;
          }
      
          sensor_channel_get(bme680_dev, SENSOR_CHAN_AMBIENT_TEMP, &t);
          sensor_channel_get(bme680_dev, SENSOR_CHAN_PRESS, &p);
          sensor_channel_get(bme680_dev, SENSOR_CHAN_HUMIDITY, &h);
      
          data->temperature = sensor_value_to_double(&t);
          data->pressure    = sensor_value_to_double(&p);
          data->humidity    = sensor_value_to_double(&h);
          return 0;
      }
    ''',
    'src/main.c': '''
      /*
       * Zephyr application entry point.
       * Generated by demol -- SAMPLING loop.
       */
      
      #include <zephyr/kernel.h>
      
      int main(void)
      {
      	while (1) {
      		k_msleep(100);
      		bme680_read();
      	}
      	return 0;
      }
    ''',
  })
# ---
# name: test_zephyr_codegen_golden[wemos_srf05][wemos_srf05]
  dict({
    'CMakeLists.txt': '''
      cmake_minimum_required(VERSION 3.20.0)
      find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
      project(wemosd1mini)
      target_sources(app PRIVATE src/main.c src/srf05.c)
      target_include_directories(app PRIVATE src/include)
    ''',
    'boards/wemosd1mini.overlay': '''
      /* Generated by demol */
      / {
          srf05_0: srf05_0 {
              compatible = "demol,srf05";
              status = "okay";
              trigger-gpios = <&gpio0 0 GPIO_ACTIVE_HIGH>;
              echo-gpios = <&gpio0 0 GPIO_ACTIVE_HIGH>;
          };
      };
  
    ''',
    'dts/bindings/demol-srf05.yaml': '''
      description: Srf05 sensor
      compatible: "demol,srf05"
      
      properties:
        trigger-gpios:
          type: phandle-array
          required: true
          description: GPIO trigger pin
  
    ''',
    'prj.conf': '''
      # Generated by demol
      CONFIG_GPIO=y
      # MQTT client stack (T16 — skeleton only)
      CONFIG_NET_IPV4=y
      CONFIG_NET_TCP=y
      CONFIG_NET_SOCKETS=y
      CONFIG_NET_SOCKETS_OFFLOAD=n
      CONFIG_NET_DHCPV4=y
      CONFIG_MQTT_LIB=y
  
    ''',
    'src/main.c': '''
      /*
       * Zephyr application entry point.
       * Generated by demol -- driver logic is added in a later task.
       */
      
      #include <zephyr/kernel.h>
      #include <zephyr/net/mqtt.h>
      #include <zephyr/net/socket.h>
      
      static struct mqtt_client client;
      
      static void mqtt_init(void)
      {
              /* T16 skeleton: broker.connect, client.init.
               * Full publish loop is implemented in a later task.
               */
      }
      
      int main(void)
      {
              mqtt_init();
              return 0;
      }
  
    ''',
    'src/srf05.c': '''
      /*
       * Zephyr SRF05 driver (trigger-echo ultrasonic distance sensor).
       * Generated by demol — uses the shared trigger_echo_init /
       * trigger_echo_read macros from _macros.j2.
       *
       * Note: SRF05 is timing-compatible with SRF04; the same trigger-then-
       * measure-echo protocol applies.
       */
      
      #include <zephyr/device.h>
      #include <zephyr/drivers/gpio.h>
      
      #include "srf05.h"
      
      static int trigger_echo_init_d3_d4(const struct device *dev)
      {
          ARG_UNUSED(dev);
          if (!device_is_ready(dev)) {
              return -ENODEV;
          }
          return 0;
      }
      static int32_t trigger_echo_read_d3_d4(const struct device *dev, uint32_t timeout_us)
      {
          ARG_UNUSED(dev);
          ARG_UNUSED(timeout_us);
          /* Set trigger high for 10us, measure echo pulse width.
           *
           * The full GPIO + cycle-counter shim is filled in by the user
           * when porting to a specific board. The skeleton is intentionally
           * left as a documented stub so the template renders for every
           * trigger-echo device without compiling device-specific includes.
           */
          return 0;
      }
      
      static const struct gpio_dt_spec srf05_trigger = GPIO_DT_SPEC_GET(DT_INST(0, gpio_trigger), gpios);
      static const struct gpio_dt_spec srf05_echo    = GPIO_DT_SPEC_GET(DT_INST(0, gpio_echo),    gpios);
      static const struct device *srf05_dev          = DEVICE_DT_GET(DT_INST(0, gpio_trigger));
      
      int srf05_init(void)
      {
          return trigger_echo_init_d3_d4(srf05_dev);
      }
      
      int srf05_read_cm(uint32_t timeout_us)
      {
          ARG_UNUSED(srf05_trigger);
          ARG_UNUSED(srf05_echo);
          return trigger_echo_read_d3_d4(srf05_dev, timeout_us);
      }
    ''',
  })
# ---
